test/expected/set-error.out
cdecl> set debug=x
                 ^
3,11: error: "x": invalid value for debug; must be [u]+|*|-
cdecl> set expl
           ^
4,5: error: "expl": ambiguous set option; could be explicit-ecsu or explicit-int
cdecl> set expli
           ^
5,5: error: "expli": ambiguous set option; could be explicit-ecsu or explicit-int
cdecl> set explicit-ecsu=x
                         ^
6,19: error: "x": invalid value for explicit-ecsu; must be [ecsu]+|*|-
cdecl> set explicit-int
           ^
7,5: error: set option "explicit-int" requires =<value>
cdecl> set explicit-int=x
                        ^
8,18: error: "x": invalid value for explicit-int; must be i|u|{[u]{i|s|l[l]}[,]}+|*|-
cdecl> set graphs
           ^
9,5: error: "no" required for "graphs"
cdecl> set lang=xxx
                ^
10,10: error: "xxx": unknown language
cdecl> set nodigraphs
           ^
11,5: error: "no" not valid for "digraphs"
cdecl> set noexplicit-int=u
                          ^
12,20: error: "no" set options take no value
cdecl> set prompt=x
                  ^
13,12: error: "x": set option "prompt" takes no value
cdecl> set west-decl=x
                     ^
14,15: error: "x": invalid value for west-decl; must be [bflost]+|*|-
cdecl> set xxx
           ^
15,5: error: "xxx": unknown set option
